--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <div class="top-container">
-        <img class="top-cloud" src="images/cloud.png" alt="cloud-img">
+        <img class="top-cloud" src="cloud.png" alt="cloud-img">
         <h1>I am Emmanuel.</h1>
         <h2>a web <span class="dev">dev</span>eloper</h2>
         <img class="bottom-cloud" src="images/cloud.png" alt="cloud-img">
@@ -21,7 +21,7 @@
     </div>
     <div class="middle-container">
         <div class="profile">
-          <img class="profile-pic" src="images/man.png" alt="emmanuel-korir">
+          <img class="profile-pic" src="man.png" alt="emmanuel-korir">
           <h2>Hello.</h2>
           <p class="intro">I am a Web Developer and a medical student. I spend most of my time learning new things and I love to code.</p>
         </div>
@@ -29,7 +29,7 @@
         <div class="skills">
           <h2>My Skills.</h2>
           <div class="skill-row">
-            <img class="web" src="images/webcoding.png" alt="web-coding">
+            <img class="web" src="webcoding.png" alt="web-coding">
             <h3>Web Design & Web Development</h3>
             <p>I started to code when I was in high school because I wanted to make my own video games. As a result, I have acquired a wealth of experience in designing and developing web applications.</p>
           </div>
