--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
         <img class="top-cloud" src="cloud.png" alt="cloud-img">
         <h1>I am Emmanuel.</h1>
         <h2>a web <span class="dev">dev</span>eloper</h2>
-        <img class="bottom-cloud" src="images/cloud.png" alt="cloud-img">
-        <img src="images/mountain.png" alt="mountain-img">
+        <img class="bottom-cloud" src="cloud.png" alt="cloud-img">
+        <img src="mountain.png" alt="mountain-img">
     </div>
     <div class="middle-container">
         <div class="profile">
